# payload-dumper-gui

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  README.md  build.gradle.kts  build.rs  settings.gradle.kts
.github/workflows/: ci.yml  release.yml  update_lib.yml  winci.yml
app/: Cargo.toml  build.gradle.kts
app/lib/: extractor.rs  jni.rs  lib.rs
app/src/androidTest/java/com/rhythmcache/payloaddumper/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rhythmcache/payloaddumper/: FilePicker.kt  Info.kt  MainActivity.kt  PayloadDumper.kt
app/src/main/java/com/rhythmcache/payloaddumper/repository/: LocalPayloadRepository.kt  RemotePayloadRepository.kt
app/src/main/java/com/rhythmcache/payloaddumper/ui/screens/: BrowserScreen.kt  LocalFilesScreen.kt  RemoteFilesScreen.kt  SettingsScreen.kt
app/src/main/java/com/rhythmcache/payloaddumper/ui/screens/components/: IncrementalOtaDialog.kt  PartitionCard.kt  PartitionsView.kt  PermissionCard.kt  UpdateCheckUI.kt
app/src/main/java/com/rhythmcache/payloaddumper/ui/state/: PartitionState.kt  UiState.kt
app/src/main/java/com/rhythmcache/payloaddumper/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/rhythmcache/payloaddumper/utils/: HashVerifier.kt  LocaleManager.kt  StorageUtils.kt  UpdateChecker.kt
app/src/main/java/com/rhythmcache/payloaddumper/viewmodel/: PayloadViewModel.kt
app/src/main/res/drawable/: gh.xml  ic_launcher_foreground.xml  tg.xml
app/src/main/res/drawable-night/: splash_background.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_provider_paths.xml
app/src/test/java/com/rhythmcache/payloaddumper/: ExampleUnitTest.kt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 101.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: capi.rs  extractor.rs  jni.rs  lib.rs
windows/: meson.build  meson_options.txt
windows/src/: app.rc  bootstrap.cpp  window.cpp
