[package]
name    = "payload-dumper-gui"
version = "0.1.2"
edition = "2024"

[lib]
name       = "payload_dumper"
path       = "lib/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow              = "1.0.100"
jni                 = { version = "0.21.1", optional = true }
num_cpus            = "1.17.0"
once_cell           = "1.21.3"
payload_dumper_core = { git = "https://github.com/rhythmcache/payload-dumper-rust.git", package = "payload_dumper", rev = "48798601100409ed54a00e81794eb771d22d9c6a" }
serde               = { version = "1.0.228", features = ["derive"] }
serde_json          = "1.0.148"
tokio               = { version = "1.49.0", features = ["full"] }

[build-dependencies]
cbindgen = "0.29"

[features]
default = []
jni     = ["dep:jni"]
capi    = []

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
strip           = true
debug           = false
incremental     = false
overflow-checks = false
