[package]
name    = "payload-dumper-gui"
version = "0.1.2"
edition = "2024"

[lib]
name       = "payload_dumper"
path       = "lib/lib.rs"
crate-type = ["cdylib"]

[dependencies]
jni                 = "0.21.1"
payload_dumper_core = { git = "https://github.com/rhythmcache/payload-dumper-rust.git", package = "payload_dumper", rev = "48798601100409ed54a00e81794eb771d22d9c6a" }

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
strip           = true
debug           = false
incremental     = false
overflow-checks = false
